api/terraform/prod/ec2.tf
resource "aws_instance" "my_ec2" {
  ami           = "ami-00e428798e77d38d9"
  instance_type = "t3.micro"
  subnet_id     = "subnet-091a8716cb204b874"
  vpc_security_group_ids = [
    aws_security_group.instance_sg.id, # allow ALB -> instance traffic
    "sg-0e3fbebdccf513f8a"             # keep existing SG (optional)
  ]
  key_name             = "aws-access-key"
  iam_instance_profile = "ais-ec2-ssm-role"

  root_block_device {
    volume_type = "gp3"
    volume_size = 8
    iops        = 3000
    throughput  = 125
  }

  tags = {
    Name = "ais-api"
    Env  = var.env
  }
}
